--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
+    "mongoose-paginate-v2": "^1.7.1",
+    "nodemon": "^2.0.22",
     "npm": "^9.6.6"
   }
 }
