--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "express": "^4.18.2",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.0",
+    "mime": "^3.0.0",
+    "mime-types": "^2.1.35",
     "mongoose": "^7.1.1",
     "mongoose-paginate-v2": "^1.7.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "npm": "^9.6.6"
   }
