--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "npm": "^9.6.6"
+    "npm": "^9.6.6",
+    "sharp": "^0.32.1"
   }
 }
